syntax = "proto3";
package types;

option go_package = "github.com/ginchuco/ginchu/fsm/types";

import "google/protobuf/any.proto";
import "consensus.proto";

message MessageSend {
  bytes from_address = 1;
  bytes to_address = 2;
  uint64 amount = 3;
}

message MessageStake {
  bytes public_key = 1;
  uint64 amount = 2;
  repeated uint64 committees = 3;
  string net_address = 4;
  bytes output_address = 5;
  bool delegate = 6;
  bool compound = 7;
}

message MessageEditStake {
  bytes address = 1;
  uint64 amount = 2;
  repeated uint64 committees = 3;
  string net_address = 4;
  bytes output_address = 5;
  bool compound = 6;
  bytes signer = 7;
}

message MessageUnstake {
  bytes address = 1;
}

message MessagePause {
  bytes address = 1;
}

message MessageUnpause {
  bytes address = 1;
}

message MessageChangeParameter {
  string parameter_space = 1;
  string parameter_key = 2;
  google.protobuf.Any parameter_value = 3;
  uint64 start_height = 4;
  uint64 end_height = 5;
  bytes signer = 6;
}

message MessageDAOTransfer {
  bytes address = 1;
  uint64 amount = 2;
  uint64 start_height = 4;
  uint64 end_height = 5;
}

message MessageCertificateResults {
  QuorumCertificate qc = 1;
}

message MessageSubsidy {
  bytes address = 1;
  uint64 committee_id = 2;
  uint64 amount = 3;
  string opcode = 4;
}

message MessageCreateOrder {
  uint64 CommitteeId = 1;
  uint64 AmountForSale = 2;
  uint64 RequestedAmount = 3;
  bytes SellerReceiveAddress = 4;
  bytes SellersSellAddress = 5;
}

message MessageEditOrder {
  uint64 OrderId = 1;
  uint64 CommitteeId = 2;
  uint64 AmountForSale = 3;
  uint64 RequestedAmount = 4;
  bytes SellerReceiveAddress = 5;
}

message MessageDeleteOrder {
  uint64 OrderId = 1;
  uint64 CommitteeId = 2;
}